# blockchain-insights-subnet

./: .dockerignore  .env.example  .gitignore  ANNONCEMENT.md  Base.Dockerfile  CHANGELOG.md  Dockerfile  LICENSE  MINER_SETUP.md  README.md  SCORING.md  VALIDATOR_SETUP.md  alembic.ini  changelog.txt  entry_point.sh  requirements.txt
.github/workflows/: ci.yml  create-release.yml  docker-base-build-publish.yml  docker-build-publish.yml  main_kamiltest.yml  sdk.yml
env/: .env.miner.example  .env.validator.example  .env.validator.mainnet
migrations/: env.py  settings.py
migrations/versions/: 001_Initial_initial.py  002_Add_api_key_initial.py  003_add_validation_prompt.py  004_add_created_at_field_to_validation_.py  005_add_network_field.py  006_add_challenge_tables.py  007_update_validation_prompts.py  008_update_validation_prompts.py  009_add_validation_prompt_response_table.py  010_add_prompt_cascade_removal.py  011_add_result_field_to_prompt_response.py  012_storing_prompt_result_as_text.py  013_added_is_valid_to_prompt_result.py  (+15 more)
ops/: README.md
scripts/: run_benchmark.sh  run_faucet.sh  run_gateway.sh  run_leaderboard.sh  run_leaderboard_auto_update.sh  run_miner.sh  run_prompt_generation_bitcoin.sh  run_validator.sh  run_validator_api.sh  run_validator_api_auto_update.sh  run_validator_auto.sh  run_validator_auto_update.sh
src/sdk/: pyproject.toml
src/sdk/chaininsights/: EXAMPLE.md  config.py  main.py
src/sdk/chaininsights/api/: __init__.py  balance_tracking.py  funds_flow.py  miners.py
src/sdk/chaininsights/models/: response_models.py
(+159 files in other folders)
